--- a/auth/.env
+++ b/auth/.env
@@ -1,8 +1,8 @@
-MONGODB_URL=mongodb://localhost:27017/
 MONGO_SERVICE_PORT=27019
-POSTGRES_DB=store
-POSTGRES_USER=customer
-POSTGRES_PASSWORD=password123
+MONGO_SERVICE_HOST=0.0.0.0
+MONGO_DB_NAME=auth
+MONGODB_USERNAME=customer
+MONGODB_PASSWORD=password123
 POSTGRES_TEST_DB=store_test
 BCRYPT_PASSWORD=password123
 SALT_ROUNDS=10
