--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -22,3 +22,6 @@ Flask-Session==0.3.2
 Flask-Ext==0.1
 regex==2021.4.4
 mongoengine==0.23.1
+bcrypt==3.2.0
+flask-mongoengine==1.0.0
+cryptography==3.4.7
