--- a/eventbus/requirements.txt
+++ b/eventbus/requirements.txt
@@ -25,7 +25,7 @@ mongoengine==0.23.1
 # bcrypt==3.2.0
 flask-mongoengine==1.0.0
 # cryptography==3.4.7
-Flask-SQLAlchemy==2.5.1
+# Flask-SQLAlchemy==2.5.1
 stripe==2.57.0
 requests==2.25.1
 DateTime==4.3
