--- a/expiration/requirements.txt
+++ b/expiration/requirements.txt
@@ -31,3 +31,6 @@ requests==2.25.1
 DateTime==4.3
 multiprocess==0.70.11
 asyncio==3.4.3
+wheel==0.36.2
+psycopg2-binary==2.8.6
+python-dotenv==0.17.1
